--- a/src/Services/CatalogService/CatalogService.Api/appsettings.json
+++ b/src/Services/CatalogService/CatalogService.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "localdb": "Data Source=DESKTOP-QSHBLNM\\MSSQLSERVER2022;Initial Catalog=EShopOnContainers;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False"
+  },
+  "CatalogSettings": {
+    "PicBaseUrl": "Pics/"
+  }
 }
