--- a/src/ApiGateways/WebApiGateway/Web.ApiGateway/Web.ApiGateway.csproj
+++ b/src/ApiGateways/WebApiGateway/Web.ApiGateway/Web.ApiGateway.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
+    <PackageReference Include="Ocelot" Version="23.2.2" />
+    <PackageReference Include="Ocelot.Provider.Consul" Version="23.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
