BasketService was done.

--- a/src/Services/BasketService/BasketService.Api/appsettings.json
+++ b/src/Services/BasketService/BasketService.Api/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthConfig": {
+    "SecretKey": "EShopSecretKeyShouldBeLongSoItIstooLong!"
+  },
+  "ConsulConfig": {
+    "Address": "http://localhost:8500/",
+    "ServiceAddress": "http://localhost:5003",
+    "ServiceName": "BasketService",
+    "ServiceId": "Basket"
+  },
+  "RedisSettings": {
+    "ConnectionString": "localhost:6379"
+  }
 }
