--- a/src/Services/IdentityService/IdentityService.Api/appsettings.json
+++ b/src/Services/IdentityService/IdentityService.Api/appsettings.json
@@ -11,5 +11,8 @@
     "ServiceAddress": "http://localhost:5005",
     "ServiceName": "IdentityService",
     "ServiceId": "Identity"
+  },
+  "AuthConfig": {
+    "SecretKey": "EShopSecretKeyShouldBeLongSoItIstooLong!"
   }
 }
