--- a/src/Services/BasketService/BasketService.Api/Properties/launchSettings.json
+++ b/src/Services/BasketService/BasketService.Api/Properties/launchSettings.json
@@ -8,18 +8,18 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5249"
+      "applicationUrl": "http://localhost:5003"
     },
-    "https": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7299;http://localhost:5249"
-    },
+    //"https": {
+    //  "commandName": "Project",
+    //  "launchBrowser": true,
+    //  "launchUrl": "swagger",
+    //  "environmentVariables": {
+    //    "ASPNETCORE_ENVIRONMENT": "Development"
+    //  },
+    //  "dotnetRunMessages": true,
+    //  "applicationUrl": "https://localhost:7299;http://localhost:5249"
+    //},
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
