--- a/src/Services/OrderService/OrderService.Api/appsettings.json
+++ b/src/Services/OrderService/OrderService.Api/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "AuthConfig": {
+    "Secret": "EShopSecretKeyShouldBeLongSoItIstooLong!"
+  },
+
+  "ConsulConfig": {
+    "Address": "http://localhost:8500/",
+    "ServiceAddress": "http://localhost:5002",
+    "ServiceName": "OrderService",
+    "ServiceId": "Order"
+  },
+
+  "OrderDbConnectionString": "Data Source=DESKTOP-QSHBLNM\\MSSQLSERVER2022;Initial Catalog=EShopOnContainers;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False"
 }
