Graylog was implemented to BasketService.

--- a/src/Services/OrderService/OrderService.Api/appsettings.json
+++ b/src/Services/OrderService/OrderService.Api/appsettings.json
@@ -18,5 +18,5 @@
     "ServiceId": "Order"
   },
 
-  "OrderDbConnectionString": "Data Source=DESKTOP-QSHBLNM\\MSSQLSERVER2022;Initial Catalog=EShopOnContainers;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False"
+  "OrderDbConnectionString": "Data Source=DESKTOP-QSHBLNM\\MSSQLSERVER2022;Initial Catalog=Order;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False"
 }
