--- a/src/ApiGateways/WebApiGateway/Web.ApiGateway/Web.ApiGateway.csproj
+++ b/src/ApiGateways/WebApiGateway/Web.ApiGateway/Web.ApiGateway.csproj
@@ -4,10 +4,15 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>ff32242e-b29a-438d-aae8-7a11c611bf88</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
     <PackageReference Include="Ocelot" Version="23.2.2" />
     <PackageReference Include="Ocelot.Provider.Consul" Version="23.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
