--- a/src/Services/BasketService/BasketService.Api/Configurations/appsettings.Development.json
+++ b/src/Services/BasketService/BasketService.Api/Configurations/appsettings.Development.json
@@ -10,12 +10,12 @@
     "SecretKey": "EShopSecretKeyShouldBeLongSoItIstooLong!"
   },
   "ConsulConfig": {
-    "Address": "http://localhost:8500/",
-    "ServiceAddress": "http://localhost:5003",
+    "Address": "http://s_consul:8500/",
+    "ServiceAddress": "http://basketservice.api:5003",
     "ServiceName": "BasketService",
     "ServiceId": "Basket"
   },
   "RedisSettings": {
-    "ConnectionString": "localhost:6379"
+    "ConnectionString": "s_redis:6379"
   }
 }
