--- a/src/Services/CatalogService/CatalogService.Api/appsettings.json
+++ b/src/Services/CatalogService/CatalogService.Api/appsettings.json
@@ -7,15 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "localdb": "Data Source=DESKTOP-QSHBLNM\\MSSQLSERVER2022;Initial Catalog=EShopOnContainers;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False"
+    "localdb": "Data Source=s_sqlserver;Initial Catalog=EShopOnContainers;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False"
   },
   "CatalogSettings": {
     "PicBaseUrl": "Pics/"
   },
 
   "ConsulConfig": {
-    "Address": "http://localhost:8500/",
-    "ServiceAddress": "http://localhost:5004",
+    "Address": "http://s_consul:8500/",
+    "ServiceAddress": "http://catalogservice.api:5004",
     "ServiceName": "CatalogService",
     "ServiceId": "Catalog"
   }
