--- a/src/Services/OrderService/OrderService.Api/appsettings.json
+++ b/src/Services/OrderService/OrderService.Api/appsettings.json
@@ -12,11 +12,11 @@
   },
 
   "ConsulConfig": {
-    "Address": "http://localhost:8500/",
-    "ServiceAddress": "http://localhost:5002",
+    "Address": "http://s_consul:8500/",
+    "ServiceAddress": "http://orderservice.api:5002",
     "ServiceName": "OrderService",
     "ServiceId": "Order"
   },
 
-  "OrderDbConnectionString": "Data Source=DESKTOP-QSHBLNM\\MSSQLSERVER2022;Initial Catalog=Order;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False"
+  "OrderDbConnectionString": "Data Source=s_sqlserver;Initial Catalog=Order;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False"
 }
