--- a/src/Clients/BlazorWebApp/WebApp/Properties/launchSettings.json
+++ b/src/Clients/BlazorWebApp/WebApp/Properties/launchSettings.json
@@ -35,6 +35,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
