--- a/src/Services/IdentityService/IdentityService.Api/appsettings.json
+++ b/src/Services/IdentityService/IdentityService.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConsulConfig": {
-    "Address": "http://localhost:8500",
-    "ServiceAddress": "http://localhost:5005",
+    "Address": "http://s_consul:8500",
+    "ServiceAddress": "http://identityservice.api:5005",
     "ServiceName": "IdentityService",
     "ServiceId": "Identity"
   },
